[package]
name = "s3_iter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-sdk-s3 = { version = "1.16.0", features = ["behavior-version-latest"]}
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.1", features = ["derive"] }
anyhow = "1.0.80"
aws-config = "1.1.6"
derive_builder = "0.20.0"